Chapter 11 — Listing 11.8: CancellationLimits.java Demonstrates: CompletableFuture.cancel() marks the future cancelled but does