@@ -1,11 +1,13 @@
-// Java 8+
+// Java 25+
+// Feature shown: CompletableFuture.cancel() limitations, final in Java 8+
+
 /**
  * Listing 11.8 — CancellationLimits.java
- * Demonstrates: CompletableFuture.cancel() marks the future cancelled
- *               but does NOT interrupt the underlying thread — the task
- *               continues running to completion in the background.
+ * Demonstrates: CompletableFuture.cancel() marks the future cancelled but does
+ * not interrupt the underlying thread — the task continues running to completion.
  * Chapter 11: Declarative and Structured Concurrency
- * Requires: Java 8+
+ * Requires: Java 25+ (compiled with --enable-preview --release 21 for
+ * the void main() instance main method)
  */
 package chapter11;
 
@@ -21,49 +23,47 @@ public class CancellationLimits {
     private static final Logger log =
             Logger.getLogger(CancellationLimits.class.getName());
 
-    public static void main(String[] args) throws Exception {
+    void main() throws Exception {
 
         ExecutorService executor = Executors.newFixedThreadPool(2);
 
-        // Submit a long-running task to the executor
+        // Task sleeps 3 seconds — cancel() will not stop it
         CompletableFuture<String> future =
                 CompletableFuture.supplyAsync(() -> {
                     try {
                         log.info("Task started — running...");
-                        Thread.sleep(3000); // simulates long work
-                        log.info("Task completed normally"); // still prints!
+                        Thread.sleep(3000);
+                        log.info("Task completed normally"); // still prints
                         return "result";
                     } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt(); // restore flag
+                        Thread.currentThread().interrupt();
                         return "interrupted";
                     }
                 }, executor);
 
-        Thread.sleep(100); // let the task start before cancelling
+        Thread.sleep(100); // let the task start
 
         // Marks the future as cancelled.
         // Does NOT interrupt the thread running the task.
         // The task continues executing in the background.
         boolean cancelled = future.cancel(true);
-        log.info("Cancelled: " + cancelled); // true — future is cancelled
+        log.info("Cancelled: " + cancelled);
 
         try {
             future.get(); // throws CancellationException immediately
         } catch (CancellationException e) {
-            log.warning("Future was cancelled — "
-                    + "but task may still be running in background");
+            log.warning("Future was cancelled — but task may still be running");
         }
 
         // The task log line "Task completed normally" will still appear
-        // ~3 seconds after cancel() because the underlying thread was
-        // not stopped — cancel() only affects the Future, not the thread.
+        // ~3 seconds after cancel() because the underlying thread was not stopped.
         executor.shutdown();
         executor.awaitTermination(5, TimeUnit.SECONDS);
 
         // Output:
         // INFO: Task started — running...
         // INFO: Cancelled: true
-        // WARNING: Future was cancelled — but task may still be running in background
-        // INFO: Task completed normally   <-- appears ~3s later, proving thread ran on
+        // WARNING: Future was cancelled — but task may still be running
+        // INFO: Task completed normally
     }
 }
